<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal"></LinearLayout>

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_edad"
        android:inputType="number"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtMedicamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_medicamento"
        android:inputType="text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCamara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnCamara" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="107dp" />

    <EditText
        android:id="@+id/txtDosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_dosis"
        android:inputType="number"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtAdministracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_administracion"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txtHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_hora_administracion"
        android:inputType="none"
        android:textSize="24sp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGuarda"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CrearBase"
        android:visibility="gone" />

</LinearLayout>